--- a/generators/ajaxful_rating/templates/style.css
+++ b/generators/ajaxful_rating/templates/style.css
@@ -1,25 +1,84 @@
-/* 
- * I'm not a CSS guru so... you may want to customize the style for your view.
- * This one has been tested on IE7 and Firefox 2
- *
- * Don't forget to include this on your layout.
- * <%= stylesheet_link_tag 'ajaxful_rating' %>
+/*
+* Style by Rogie http://www.komodomedia.com/blog/2007/01/css-star-rating-redux/
 */
 
-ul.ajaxful-rating {
+.ajaxful-rating,
+.ajaxful-rating a:hover,
+.ajaxful-rating a:active,
+.ajaxful-rating a:focus,
+.ajaxful-rating .current-rating{
+    background: url(/images/ajaxful_rating/star.gif) left -1000px repeat-x;
+}
+.ajaxful-rating{
+    position: relative;
+    /*width: 125px; this is setted dynamically */
+    height: 25px;
+    overflow: hidden;
     list-style: none;
-    margin: 10px 0;
+    margin: 0;
+    padding: 0;
+    background-position: left top;
+}
+.ajaxful-rating li{ display: inline; }
+.ajaxful-rating a,
+.ajaxful-rating span,
+.ajaxful-rating .current-rating{
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-indent: -1000em;
+    height: 25px;
+    line-height: 25px;
+    outline: none;
+    overflow: hidden;
+    border: none;
+}
+.ajaxful-rating a:hover,
+.ajaxful-rating a:active,
+.ajaxful-rating a:focus{
+    background-position: left bottom;
 }
 
-ul.ajaxful-rating li.star {
-    float: left;
-    width: 25px;
-    hegiht: 25px;
+/* This section is generated dynamically.
+Just add a call to the helper method 'ajaxful_rating_style' within
+the head tags in your main layout 
+.ajaxful-rating .stars-1{
+width: 20%;
+z-index: 6;
+}
+.ajaxful-rating .stars-2{
+width: 40%;
+z-index: 5;
+}
+.ajaxful-rating .stars-3{
+width: 60%;
+z-index: 4;
+}
+.ajaxful-rating .stars-4{
+width: 80%;
+z-index: 3;
+}
+.ajaxful-rating .stars-5{
+width: 100%;
+z-index: 2;
+}
+*/
+.ajaxful-rating .current-rating{
+    z-index: 1;
+    background-position: left center;
 }
 
-ul.ajaxful-rating li.clearer { clear: both; }
-ul.ajaxful-rating li a { text-decoration: none; }
-ul.ajaxful-rating li a img { border: none; }
-ul.ajaxful-rating li.on { background: url(/images/ajaxful_rating/star_on.gif) top center no-repeat; }
-ul.ajaxful-rating li.off { background: url(/images/ajaxful_rating/star_off.gif) top center no-repeat; }
-ul.rateable li.star:hover { background: url(/images/ajaxful_rating/star_hover.gif) top center no-repeat; }
+/* smaller star */
+.small-star{
+    /*width: 50px; this is setted dynamically */
+    height: 10px;
+}
+.small-star,
+.small-star a:hover,
+.small-star a:active,
+.small-star a:focus,
+.small-star .current-rating{
+    background-image: url(/images/ajaxful_rating/star_small.gif);
+    line-height: 10px;
+    height: 10px;
+}
